--- a/src/components/timeline/Timeline.css
+++ b/src/components/timeline/Timeline.css
@@ -1,6 +1,10 @@
 .timeline {
   flex: 0.5;
   border-right: 1px solid var(--twitter-background);
+  overflow-y: scroll;
+}
+.timeline::-webkit-scrollbar {
+  display: none;
 }
 .timeline_header {
   position: sticky;
