--- a/src/components/timeline/Post.css
+++ b/src/components/timeline/Post.css
@@ -5,7 +5,11 @@
 }
 .post_body {
   flex: 1;
-  padding: 10px;
+  padding-bottom: 8px;
+}
+p {
+  margin: 0;
+  padding: 0;
 }
 .post_body > img {
   border-radius: 20px;
@@ -14,7 +18,7 @@
 .post_footer {
   display: flex;
   justify-content: space-between;
-  margin-top: 10px;
+  margin-top: 8px;
 }
 .post_headerDescription {
   margin-bottom: 10px;
@@ -34,5 +38,5 @@
   color: rgb(135, 135, 135);
 }
 .post_avatar {
-  padding: 20px;
+  padding: 15px;
 }
