--- a/src/components/sidebar/Sidebar.css
+++ b/src/components/sidebar/Sidebar.css
@@ -21,3 +21,9 @@
   height: 50px !important;
   margin-top: 20px !important;
 }
+@media screen and (max-width: 480px) {
+  /* 480px以下に適用されるCSS（スマホ用） */
+  .sidebar {
+    display: none;
+  }
+}
